crates/rolldown/tests/rolldown/errors/forbid_const_assign/main.js
const a = 10;

a += 1;

a ++;

a = 2;

